--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-bokeh==3.2.0
-pandas==2.0.3
-Pillow==10.0.0
-streamlit==1.24.1
-streamlit_elements==0.1.0
-streamlit_timeline==0.0.2
+bokeh
+pandas
+Pillow
+streamlit
+streamlit_elements
+streamlit_timeline
